Bug 163703 - Format of text in comments not kept in LO 24.8
Summary: Format of text in comments not kept in LO 24.8
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.5
Keywords: bibisected, regression
: 161942 162149 164145 164160 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-10-31 17:46 UTC by Orwel
Modified: 2024-12-07 14:29 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (17.46 KB, application/vnd.oasis.opendocument.text)
2024-10-31 17:47 UTC, Orwel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Orwel 2024-10-31 17:46:43 UTC
Description:
I know, this version is not official yet, but I want to let you know.

Steps to Reproduce:
1. open attached file
2. do format changes in comment, like written
3. save and close file
4. reopen file

Actual Results:
all formatting in comments is lost

Expected Results:
should not be


Reproducible: Always


User Profile Reset: No

Additional Info:
-
Comment 1 Orwel 2024-10-31 17:47:07 UTC
Created attachment 197323 [details]
test file
Comment 2 BogdanB 2024-10-31 20:30:42 UTC
Confirm with
Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Italic some text from comment. Save. File - Reload. -> Italic text is normal.
Comment 3 BogdanB 2024-10-31 20:31:31 UTC
Also in master.
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 15eb26d0f22c621f81086fc8d3c6525838adb426
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 BogdanB 2024-10-31 20:53:00 UTC
Mike, please, can you take a look?

author	Mike Kaganski <mike.kaganski@collabora.com>	2024-04-24 07:55:35 +0500
committer	Mike Kaganski <mike.kaganski@collabora.com>	2024-04-24 11:37:27 +0200
commit 69ed893087f89d176a5ec4b263ce8d75774be72b (patch)
tree 95a24d99a458dad12520977dad8c44ca3d1b9a89
parent dfb412699b96e12b2758be0e422c3e775f183d17 (diff)
tdf#160253: fix list identifier export decision code
Commits 8f48f91009caa86d896f247059874242ed18bf39 (ODT export: omit
unreferenced <text:list xml:id="...">, 2022-03-10) and 82bbf63582bdf28e7918e58ebf6657a9144bc9f3  (tdf#155823: Improve the
check if the list id is not required, 2023-06-14) tried to improve
deterministic ODF output, by omitting the list identifiers in case
when those identifiers were unreferenced. The latter of these used
document model node numbers to check if other lists appeared after
the last occurrence of the list  that is continuing in the current
node. But it turned out, that this isn't robust.
Comment 5 m_a_riosv 2024-11-01 05:51:44 UTC
Looks like a dupe of tdf#161942
Comment 6 BogdanB 2024-11-01 06:07:04 UTC
Looks like this, but is easier here to reproduce: 

Italic some text from comment. Save. File - Reload. -> Italic text is normal.

And is bibisected.
Comment 7 m_a_riosv 2024-11-01 07:07:26 UTC
*** Bug 161942 has been marked as a duplicate of this bug. ***
Comment 8 Mike Kaganski 2024-11-01 07:23:00 UTC
*** Bug 162149 has been marked as a duplicate of this bug. ***
Comment 9 Mike Kaganski 2024-11-01 10:22:22 UTC
https://gerrit.libreoffice.org/c/core/+/175899
Comment 10 Commit Notification 2024-11-01 11:53:02 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f1367a41e1ba74f8bb851a7e748ad53d3260e64e

tdf#163703: export formats for FIELD_ID_ANNOTATION

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 BogdanB 2024-11-01 12:01:35 UTC
I will test it tonight.
Comment 12 BogdanB 2024-11-01 17:15:56 UTC
Thanks, Mike, working well.

Verified with
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0746914ed0778ff82329162508985fc6f7655aba
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 13 Mike Kaganski 2024-12-04 08:08:39 UTC
*** Bug 164160 has been marked as a duplicate of this bug. ***
Comment 14 Mike Kaganski 2024-12-04 08:09:26 UTC
*** Bug 164145 has been marked as a duplicate of this bug. ***
Comment 15 Commit Notification 2024-12-07 14:29:26 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/1b4b1e0659d7dff79d031ff5c8fbb34fad2c71a1

tdf#163703: export formats for FIELD_ID_ANNOTATION

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.