tdf#163703: export formats for FIELD_ID_ANNOTATION

It was omitted from commit 842160190e2996efbd936191eed787f3f79ed7b7
(INTEGRATION: CWS notes2 (1.77.24); FILE MERGED, 2008-02-19), and
the field type was skipped from autostyle export phase. With commit
69ed893087f89d176a5ec4b263ce8d75774be72b (tdf#160253: fix list
identifier export decision code, 2024-04-24), this surfaced by not
exporting comments' formatting.

Change-Id: I84a8d5616c37af093404fefb4d1ed3a212000f8d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175899
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175931